MDEV-11450 Assertion `!null_value' failed invirtual bool Item::send on json_search.

Item_func_json_search::val_str didn't set the null_value
        properly. So that affected the next record in the resultset.